# totiff

./: .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md
.github/workflows/: Release.yml  ReleaseLinux.yml  ReleaseWindows.yml  cmake.yml  cmake_win.yml
classes/: Config.cpp  Config.h  Error.cpp  Error.h  RawImage.cpp  RawImage.h  Tif.cpp  Tif.h  pathSolver.cpp  pathSolver.h
include/: expected.h  functions.h
src/: functions.cpp  main.cpp
src/test/: main.cpp
